api-resources/default/c3942311-066c-4375-83f9-5f71bc61be14/1/default_c3942311-066c-4375-83f9-5f71bc61be14_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: petstore
    namespace: petstore
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /cat
  - matches:
    - method: POST
      path:
        type: Exact
        value: /cat
  - matches:
    - method: GET
      path:
        type: Exact
        value: /dog
  - matches:
    - method: POST
      path:
        type: Exact
        value: /dog
